# Laba8

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: python-tests.yml
src/: calculator.py
tdd_calc_project/: pyproject.toml
tdd_calc_project/tests/: test_calculator.py
tests/: test_calculator.py
