[project]
name = "tdd-calc-project"
version = "0.1.0"
description = ""
authors = [
    {name = "MrSody71",email = "usmvid66780@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "calculator.py", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
