[project]
name = "Laba8"
version = "0.1.0"
description = "TDD Calculator Project"
authors = [
    {name = "MrSody71", email = "usmvid66780@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "calculator.py", from = "src"}]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"