[tool.poetry]
name = "Laba8"
version = "0.1.0"
description = "TDD Calculator Project"
authors = ["MrSody71 <usmvid66780@gmail.com>"]
readme = "README.md"
# Указываем Poetry, где искать твой код калькулятора
packages = [{include = "calculator.py", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.5"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"